# TowerOfHanoi-in-C

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.c
logic/: InputProcessing.c  TimeHelper.c  main.h  renderer.c  renderer.h
logic/Headers/: InputProcessing.h  TimeHelper.h  main.h  renderer.h
logic/PlatformSpecificFiles/MacOS/: TerminalHandler.c  TerminalHandler.h
logic/PlatformSpecificFiles/Windows/: TerminalHandler.c  TerminalHandler.h
logic/structs/: DtosHelper.c  DtosHelper.h  Game.c  Game.h  StackNode.c  StackNode.h
